# emberlog

./: .env.example  .gitignore  AGENTS.md  LICENSE.md  README.md  env.example  pyproject.toml
docs/: API_CONTRACT_v0.1.md  CURRENT_STATE.md  DEPLOYMENT_MODEL_v0.1.md  DESIGN.md  DEVELOPMENT.md  DEV_QUICKSTART.md  EVENT_MODEL_v0.2.md  INTEGRATIONS.md  PLATFORM_VISION_v0.2.md  README.md  REQUIREMENTS.md  WEB_ARCHITECTURE_v0.1.md  feature-tracker.md
emberlog/: config.py  models.py
emberlog/api/: client.py
emberlog/app/: main.py
emberlog/cleaning/: cleaner.py
emberlog/config/: config.py
emberlog/io/: api_sink.py  composite.py  json_sink.py  ledger_sink.py  local_sink.py
emberlog/models/: incident.py  job.py  transcript.py
emberlog/queue/: memory.py  types.py
emberlog/segmentation/: splitter.old  splitter.py
emberlog/state/: processed_index.py
emberlog/transcriber/: base.py  dummy.py  factory.py  stub.py  whisper_fast.py
emberlog/utils/: logger.py  loggersetup.py  logging_filters.py  transcribe.py
emberlog/watch/: watcher.py
emberlog/worker/: consumer.py
samples/transcripts/: 1795-1765646047_769568750.0-call_396714.txt  1795-1765646381_769868750.0-call_396890.txt  1795-1765646849_769868750.0-call_397205.txt  1795-1765646903_769868750.0-call_397243.txt  1795-1765646930_769618750.0-call_397260.txt  1795-1765646950_773931250.0-call_397282.txt
tests/: 1795-1762066509_769868750.0-call_32913.txt  test_demo_mode.py  test_json_sink_contract.py  test_ledger_sink_contract.py  test_smoke_pipeline.py
