[project]
name = "emberlog"
version = "0.1.0"
description = "Watcher → Queue → Transcribe → Parse → Ledger for Phoenix Fire dispatch audio."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Justin Crawford", email = "jcrawford2000@gmail.com" }]

# Optional, but nice for tooling:
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

dependencies = [
    "watchdog (>=6.0.0,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]

[pytest]
addopts = "-q"

[tool.poetry]
# Keep package include rules here (Poetry-specific)
packages = [{ include = "emberlog" }]

[tool.poetry.scripts]
emberlog = "emberlog.app.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.5"
mypy = "^1.11.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
